--- a/package.json
+++ b/package.json
@@ -3,12 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chatscope/chat-ui-kit-react": "^1.10.1",
+    "@kommunicate/kommunicate-chatbot-plugin": "^0.0.6",
+    "@rsuite/icons": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.3.0",
+    "jest": "^29.5.0",
+    "localforage": "^1.10.0",
+    "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.1",
+    "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.3.0",
+    "react-datepicker": "^4.14.1",
+    "react-datetime": "^3.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.0",
+    "react-scripts": "^5.0.1",
+    "react-simple-chatbot": "^0.6.1",
+    "reactstrap": "^9.2.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "register-service-worker": "^1.7.2",
+    "rsuite": "^5.35.1",
+    "styled-components": "^6.0.0-rc.6",
+    "suite": "^0.2.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
